# Telegramimageedit

./: .dockerignore  .replit  DEPLOYMENT.md  Dockerfile  README.md  ai_apis.py  app.py  bot.py  bot_simple.py  deepseek_python_20251015_70bc1c.py  deepseek_python_20251015_f33cc7.py  deepseek_python_20251015_fc208f.py  docker-compose.yml  image_processor  image_processor.py  pyproject.toml  render.yaml  replit.md  webhook_server.py
static/: custom.css  main.js
templates/: base.html  index.html
