[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.10",
    "python-telegram-bot>=22.3",
    "requests>=2.32.4",
    "werkzeug>=3.1.3",
    "opencv-python>=4.12.0.88",
    "rembg>=2.0.67",
    "numpy>=2.3.3",
]
